# 15puzzle

./: .gitignore  CMakeLists.txt  README.MD
src/: game.cpp  game.h  main.cpp
